# Stalkerhek-rewrite

./: .gitignore  README.md
android-app/app/src/main/java/com/stalkerhek/tv/engine/: EngineController.kt
android-app/app/src/main/java/com/stalkerhek/tv/management/: TemplateRenderer.kt
deploy/: deploy.sh  stalkerhek-engine.service  stalkerhek-webui.service
kotlin-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin-app/src/main/kotlin/com/stalkerhek/: Application.kt
kotlin-app/src/main/kotlin/com/stalkerhek/api/: AuthHelper.kt  AuthRoutes.kt  FilterRoutes.kt  HealthRoutes.kt  LogRoutes.kt  ProfileRoutes.kt  SettingsRoutes.kt  StaticRoutes.kt  Templates.kt
kotlin-app/src/main/kotlin/com/stalkerhek/auth/: AuthService.kt
kotlin-app/src/main/kotlin/com/stalkerhek/models/: Models.kt
kotlin-app/src/main/kotlin/com/stalkerhek/persistence/: Stores.kt
kotlin-app/src/main/kotlin/com/stalkerhek/rustclient/: RustEngineClient.kt
kotlin-app/src/main/kotlin/com/stalkerhek/services/: Services.kt
rust-core/: .gitignore  Cargo.toml  Dockerfile  build-router.sh  deploy-router.sh
rust-core/.cargo/: config.toml
rust-core/router/: README.txt
rust-core/router/etc/init.d/: stalkerhek
rust-core/src/: dns.rs  jni_bridge.rs  lib.rs  main.rs
rust-core/src/api/: mod.rs
rust-core/src/filter/: mod.rs
rust-core/src/hls/: mod.rs
rust-core/src/mag/: mod.rs
rust-core/src/proxy/: mod.rs
rust-core/src/stalker/: mod.rs
