[package]
name = "stalkerhek-engine"
version = "1.0.0"
edition = "2021"
description = "Stalker IPTV portal streaming engine"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
android = ["jni", "android_logger", "log"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex = "1"
rand = "0.8"
thiserror = "1"
jni = { version = "0.21", optional = true }
android_logger = { version = "0.14", optional = true }
log = { version = "0.4", optional = true }
